[gd_scene load_steps=19 format=3 uid="uid://bfpngr2c5ibha"]

[ext_resource type="Script" path="res://screens/game_screen/game_won_popup/game_won_popup.gd" id="1_4oa1d"]
[ext_resource type="Theme" uid="uid://kl1a7a0qepqx" path="res://screens/game_screen/game_won_popup/game_won.tres" id="1_c7l2l"]
[ext_resource type="Texture2D" uid="uid://dqkm5mdxivggx" path="res://screens/game_screen/game_won_popup/assets/game_won_popup_background.png" id="1_d8od3"]
[ext_resource type="Texture2D" uid="uid://l5m7w0agd372" path="res://screens/game_screen/game_won_popup/assets/continue_button.png" id="2_kqhg7"]
[ext_resource type="Texture2D" uid="uid://oy8cm2dd7sr8" path="res://screens/game_screen/game_won_popup/assets/continue_button_pressed.png" id="3_4pwwf"]
[ext_resource type="Texture2D" uid="uid://bwf8tpryja0gb" path="res://screens/game_screen/game_won_popup/assets/you_win_text.png" id="5_e6hqu"]
[ext_resource type="Texture2D" uid="uid://dfqdk6f8rbg7" path="res://screens/game_screen/game_won_popup/assets/description_box.png" id="7_rxjnf"]
[ext_resource type="Texture2D" uid="uid://btrxkpdm60t3p" path="res://assets/global_objects/single_gold_coin.png" id="8_1axay"]
[ext_resource type="Texture2D" uid="uid://dv0uluvvhnilr" path="res://screens/game_screen/game_won_popup/assets/reward_container_no_title.png" id="8_g5kxb"]
[ext_resource type="Texture2D" uid="uid://driwbbjv274rk" path="res://screens/game_screen/game_won_popup/assets/reward_container.png" id="8_nhxyk"]
[ext_resource type="Texture2D" uid="uid://ck8cw3b2onb3d" path="res://screens/game_screen/game_won_popup/assets/description_holder.png" id="9_asisb"]
[ext_resource type="Texture2D" uid="uid://cn2t6slckcxdd" path="res://screens/game_screen/game_won_popup/assets/main_menu_button.png" id="9_jgk22"]
[ext_resource type="Texture2D" uid="uid://6n0qm4ba5jfk" path="res://screens/game_screen/game_won_popup/assets/money_box_reward.png" id="9_w15qd"]
[ext_resource type="Texture2D" uid="uid://cb78ituflb72r" path="res://screens/game_screen/game_won_popup/assets/retry_button_1.png" id="10_0r5p6"]
[ext_resource type="Texture2D" uid="uid://n6oaywiq20hn" path="res://screens/game_screen/game_won_popup/assets/main_menu_button_pressed.png" id="10_phx3p"]
[ext_resource type="Texture2D" uid="uid://by6g60mw6vkpr" path="res://screens/game_screen/game_won_popup/assets/retry_button_2.png" id="11_ok220"]
[ext_resource type="AudioStream" uid="uid://djx2vlmr8oegg" path="res://assets/audio/sfx/game_screen_popups/generic_button_pressed_sfx.mp3" id="14_s3vbr"]
[ext_resource type="Script" path="res://global_objects/audio_players/sfx_player.gd" id="14_sft8n"]

[node name="GameWonPopup" type="Control"]
process_mode = 3
layout_mode = 3
anchor_right = 0.812
anchor_bottom = 0.956
offset_right = 0.959961
offset_bottom = -0.47998
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c7l2l")
script = ExtResource("1_4oa1d")

[node name="WinningCongratulationsLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 296.0
offset_top = 128.0
offset_right = 859.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0.140625, 0.824219, 0.824219, 1)
theme_override_font_sizes/font_size = 120
text = "YOU WIN!"

[node name="BackgroundTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1144, 648)
layout_mode = 0
offset_left = -136.0
offset_top = -40.0
offset_right = 1672.0
offset_bottom = 1048.0
texture = ExtResource("1_d8od3")
expand_mode = 1

[node name="CongratulationsTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 176.0
offset_right = 1164.0
offset_bottom = 370.0
texture = ExtResource("5_e6hqu")

[node name="DescriptionBox" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 400.0
offset_right = 1155.0
offset_bottom = 706.0
texture = ExtResource("7_rxjnf")

[node name="RewardContainer" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 400.0
offset_right = 534.0
offset_bottom = 750.0
texture = ExtResource("8_nhxyk")

[node name="RewardContainerNoTitle" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 152.0
offset_top = 400.0
offset_right = 534.0
offset_bottom = 750.0
texture = ExtResource("8_g5kxb")

[node name="AllyThumbnail" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 472.0
offset_right = 440.0
offset_bottom = 656.0
expand_mode = 1

[node name="CoinsRewardThumbnail" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 480.0
offset_right = 446.0
offset_bottom = 669.0
texture = ExtResource("9_w15qd")

[node name="CoinDecoration" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 381.0
offset_top = 672.0
offset_right = 461.0
offset_bottom = 749.0
texture = ExtResource("8_1axay")
expand_mode = 1

[node name="RewardLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 245.0
offset_top = 681.0
offset_right = 374.0
offset_bottom = 753.0
theme_override_font_sizes/font_size = 50

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 536.0
offset_top = 410.0
offset_right = 1136.0
offset_bottom = 666.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 3

[node name="DescriptionHolderDecoration" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 680.0
offset_right = 1012.0
offset_bottom = 873.0
texture = ExtResource("9_asisb")

[node name="RetryLevelButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1160.0
offset_top = 152.0
offset_right = 1384.0
offset_bottom = 364.0
texture_normal = ExtResource("10_0r5p6")
texture_pressed = ExtResource("11_ok220")
texture_hover = ExtResource("11_ok220")
texture_focused = ExtResource("11_ok220")

[node name="GoToMainMenuButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1160.0
offset_top = 384.0
offset_right = 1384.0
offset_bottom = 596.0
texture_normal = ExtResource("9_jgk22")
texture_pressed = ExtResource("10_phx3p")

[node name="ContinueButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1160.0
offset_top = 608.0
offset_right = 1384.0
offset_bottom = 821.0
texture_normal = ExtResource("2_kqhg7")
texture_pressed = ExtResource("3_4pwwf")

[node name="GenericBtnPressedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_s3vbr")
script = ExtResource("14_sft8n")

[connection signal="pressed" from="RetryLevelButton" to="." method="_on_retry_level_button_pressed"]
[connection signal="pressed" from="GoToMainMenuButton" to="." method="_on_go_to_main_menu_button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
